--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -469,4 +469,42 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.221" />
 
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/materialToolbar"
+        android:layout_width="376dp"
+        android:layout_height="106dp"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.542"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.044"
+        android:padding="0dp">
+
+        <TextView
+            android:id="@+id/display_calculation_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="0dp"
+            android:text="Hello"
+            android:textSize="50sp"
+            android:layout_gravity="top"
+            android:textColor="@color/white"
+            android:gravity="top"/>
+
+        <TextView
+            android:id="@+id/display_calculation_output"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="0dp"
+            android:text="Output"
+            android:textSize="50sp"
+            android:layout_gravity="bottom|end"
+            android:textColor="@color/white"
+            />
+    </com.google.android.material.appbar.MaterialToolbar>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
