initialize all buttons

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -413,7 +413,8 @@
         android:layout_width="66dp"
         android:layout_height="37dp"
         android:background="@color/black"
-        android:text="Button"
+        android:text="OK"
+        android:padding="0dp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
