add on click listeners

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -270,7 +270,7 @@
         android:layout_width="44dp"
         android:layout_height="33dp"
         android:background="@color/black"
-        android:text="->"
+        android:text="-&gt;"
         android:padding="0dp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -286,7 +286,7 @@
         android:layout_width="44dp"
         android:layout_height="33dp"
         android:background="@color/black"
-        android:text="/\"
+        android:text="/\\"
         android:padding="0dp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -318,7 +318,7 @@
         android:layout_width="44dp"
         android:layout_height="33dp"
         android:background="@color/black"
-        android:text="<-"
+        android:text="&lt;-"
         android:padding="0dp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -489,9 +489,9 @@
             android:id="@+id/display_calculation_input"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="0dp"
+            android:padding="10sp"
             android:text="Hello"
-            android:textSize="50sp"
+            android:textSize="30sp"
             android:layout_gravity="top"
             android:textColor="@color/white"
             android:gravity="top"/>
@@ -500,10 +500,10 @@
             android:id="@+id/display_calculation_output"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="0dp"
             android:text="Output"
-            android:textSize="50sp"
+            android:textSize="30sp"
             android:layout_gravity="bottom|end"
+            android:padding="10sp"
             android:textColor="@color/white"
             />
     </com.google.android.material.appbar.MaterialToolbar>
