--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -360,13 +360,45 @@
         app:layout_constraintVertical_bias="0.492" />
 
     <Button
+        android:id="@+id/opening_parenthesis_button"
+        style="@style/Base.CardView"
+        android:layout_width="66dp"
+        android:layout_height="37dp"
+        android:background="@color/black"
+        android:padding="0dp"
+        android:text="("
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.13"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.341" />
+
+    <Button
+        android:id="@+id/closing_parenthesis_button"
+        style="@style/Base.CardView"
+        android:layout_width="66dp"
+        android:layout_height="37dp"
+        android:background="@color/black"
+        android:padding="0dp"
+        android:text=")"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.892"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.341" />
+
+    <Button
         android:id="@+id/seven_button"
         style="@style/Base.CardView"
         android:layout_width="66dp"
         android:layout_height="37dp"
         android:background="@color/black"
-        android:text="7"
         android:padding="0dp"
+        android:text="7"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
